--- a/candle-transformers/Cargo.toml
+++ b/candle-transformers/Cargo.toml
@@ -15,6 +15,8 @@ byteorder = { workspace = true }
 candle = { workspace = true }
 candle-flash-attn = { workspace = true, optional = true }
 candle-nn = { workspace = true }
+candle-optimisers = { workspace = true }
+#candle-optimisers = { version = "0.5.0", features = ["cuda"], path="/home/bada/Code/ML/optimisers"}
 fancy-regex = { workspace = true }
 intel-mkl-src = { workspace = true, optional = true }
 num-traits = { workspace = true }
